# live-surface

./: CMakeLists.txt  README.md  bb.h  canvas2d.cpp  canvas2d.h  canvas3d.cpp  canvas3d.h  dijkstra.cpp  dijkstra.h  dijkstra2.cpp  dijkstra2.h  edge.h  gl2d.cpp  gl2d.h  gl3d.cpp  gl3d.h  gnode.h  image.cpp  image.h  image_graph.cpp  image_graph.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  scene.h  shared_ptr.h  snode.cpp  snode.h  texture.cpp  texture.h  timer.h  triangle.h  vec.h
xcode/: CMakeCache.txt  cmake_install.cmake
xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel  surface_postBuildPhase.makeMinSizeRel
xcode/LiveSurface.xcodeproj/: project.pbxproj
xcode/LiveSurface.xcodeproj/project.xcworkspace/xcuserdata/jedwards.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/LiveSurface.xcodeproj/xcuserdata/jedwards.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  surface.xcscheme  xcschememanagement.plist
